# test-back-fast-api

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
api/endpoints/: __init__.py  search.py  test.py  tests.py  token.py  user.py  youtube.py
api/models/: env.py  exceptions.py  jwt.py  rights.py  test.py  tests.py  user.py  youtube.py
api/service/: __init__.py  test.py  tests.py  token.py  user.py
dependencies/: jwt_token.py  logger.py  session.py  sqlalchemy_to_pydantic.py
schemas/: __init__.py  schemas.py
